creates _redirects and adds /*

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=https://beesknees-be.onrender.com
+# REACT_APP_BACKEND_URL=https://beesknees-be.onrender.com
+REACT_APP_BACKEND_URL=https://testdeployment-p04z.onrender.com
