--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "i": "^0.3.7",
+    "mdb-react-ui-kit": "^6.2.0",
+    "mdbootstrap": "^4.20.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
