--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
     "i": "^0.3.7",
     "mdb-react-ui-kit": "^6.2.0",
